# mdai-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  upload_dataset.py
mdai_utils/: common.py  dicom_utils.py  dicoms_to_volume.py  download_annotations.py  log_utils.py  merge_downloaded_parts.py  upload.py  upload_annotation_slice.py  upload_annotation_volume.py  upload_annotations.py  upload_dataset.py
tests/: conftest.py  delme_test.py  test_parameters.json  upload_annotation_slice_test.py  upload_annotation_volume_test.py  upload_dataset_test.py  upload_test.py
tests/fixtures/: humanct_0002_1000_1004_SOPInstanceUIDs.json
tests/fixtures/humanct_0002_1000_1004/: vhf.1000.dcm  vhf.1001.dcm  vhf.1002.dcm  vhf.1003.dcm  vhf.1004.dcm
