[project]
name = "mdai-utils"
description = "Utility functions for MD.ai"
requires-python = ">= 3.10"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]

authors = [
    { name = "Pablo Hernandez-Cerdan", email = "pablo.hernandez.cerdan@outlook.com" },
]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
optional-dependencies = {dev = { file = ["requirements-dev.in"] }}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.pyright]
# For pre-commit to work. See contributing.md#pre-commit
venvPath = "."
venv = ".venv"

exclude = ["**/node_modules",
    "**/__pycache__",
]
defineConstant = { DEBUG = true }

pythonVersion = "3.10"
strict = true
